added Diagnostic and TIre Service, refactored the service
