# src/main/java/com/bmw/maintenance/domain/enums/TaskType.java
@@ -1,4 +1,4 @@
-package com.bmw.maintenance.domain;
+package com.bmw.maintenance.domain.enums;
 
 /**
  * Defines supported maintenance task types.
@@ -6,4 +6,6 @@ package com.bmw.maintenance.domain;
 public enum TaskType {
     OIL_CHANGE,
     BRAKE_INSPECTION,
+    TIRE_SERVICE,
+    DIAGNOSTIC_SCAN
 }
