# src/main/java/com/bmw/maintenance/domain/enums/TireServiceType.java
@@ -1,0 +1,7 @@
+package com.bmw.maintenance.domain.enums;
+
+public enum TireServiceType {
+    TIRE_ROTATION,
+    TIRE_REPLACENMENT,
+    TIRE_ALIGNMENT
+}
